# Vulkax

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: VulkaxAtlasInfo.plist.in
data/: cities.json
data/central_london/: LICENSE-ODbL.md  README.md  navigation.json  source.source.json
data/connaught_place/: README.md  navigation.json
docs/: ATLAS_ARCHITECTURE.md  BEACON_RESEARCH_REPORT.md  BEACON_STATUS.md  RUNNING_VULKAX.md
docs/paper/: beacon_research.tex
docs/results/current/: summary.md
docs/results/final/adaptive-bounded/: frames.csv  manifest.json  summary.json
docs/results/final/adaptive-exact/: frames.csv  manifest.json  summary.json
docs/results/final/baseline/: frames.csv  manifest.json  summary.json
docs/results/final/beacon/: frames.csv  manifest.json  summary.json
docs/results/final/cpu-clustered/: manifest.json  summary.json
docs/results/final/figures/: summary.md
docs/results/final/fixed-cluster-cost-model/: clusters.csv  frames.csv  manifest.json  summary.json
docs/results/final/gpu-clustered/: frames.csv  manifest.json  summary.json
docs/results/final/instanced/: frames.csv  manifest.json  summary.json
docs/results/final/ssbo/: frames.csv  manifest.json  summary.json
scripts/: generate_beacon_figures.py  run_beacon_matrix.sh  vulkax_macos.sh
scripts/android/: check_android_vulkan.sh  run_android_benchmark.sh
services/atlas_gateway/: server.py
shaders/: cluster_build.comp  simple_shader.frag  simple_shader_adaptive.frag  simple_shader_clustered.frag  simple_shader_instanced.vert  simple_shader_ssbo.frag
src/: first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_swap_chain.cpp  lve_window.cpp  lve_window.hpp  main.cpp  runtime_paths.cpp  runtime_paths.hpp
src/atlas/navigation/: local_navigation.cpp  local_navigation.hpp
src/beacon/: adaptive_vulkan_builder.cpp  adaptive_vulkan_builder.hpp  beacon_research.cpp  beacon_research.hpp  benchmark_config.cpp  benchmark_config.hpp  benchmark_runner.cpp  benchmark_runner.hpp  cluster_experiment.cpp  cluster_experiment.hpp  gpu_profiler.cpp  gpu_profiler.hpp  offscreen_comparison.cpp  offscreen_comparison.hpp  progress.cpp  progress.hpp  render_stats.cpp  render_stats.hpp  scene_generator.cpp  scene_generator.hpp
src/geobeacon/: geo_city_registry.cpp  geo_city_registry.hpp
src/platform/: desktop_map_controls.hpp  desktop_map_controls_macos.mm  desktop_map_controls_stub.cpp
src/systems/: clustered_lighting_system.cpp  clustered_lighting_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
tests/: atlas_core_tests.cpp  test_atlas_gateway.py  test_city_dataset_reproducibility.py  test_connaught_navigation.py  test_geobeacon_tools.py  test_macos_app_bundle.py
tools/: build_connaught_navigation.py  build_geobeacon_tiles.py  fetch_osm_extract.py
